fix overlapping components/elements

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 body, html {
   margin: 0;
-  /*overflow: hidden;*/
   height:100%;
 }
 
@@ -13,6 +12,7 @@ body, html {
     width: 20%;
     overflow-y: scroll;
     display: table;
+    /*height: 100%;*/
   }
   
   #right {
@@ -20,7 +20,7 @@ body, html {
     top: 0;
     bottom: 0;
     right: 0;
-    /*overflow-y: scroll;*/
+    float: right;
     width: 80%;
   }
 }
@@ -32,9 +32,12 @@ body, html {
 }
 
 #right {
-  height: 100%;
-  text-align: center;
+  display: block;
+  /*height: 100%;*/
+  /*text-align: center;*/
   /*scroll-behavior: smooth;*/
+  /*display: flex;
+  flex-direction: column;*/
 }
 
 .active {
@@ -44,13 +47,23 @@ body, html {
 }
 
 .scroll-container {
-  width: 100%;
+  /*width: 100%;
   height: 100%;
   text-align: center;
   vertical-align: middle;
-  display: table;
+  display: table;*/
+  /*position: absolute;*/
+  /*display: block;*/
 }
 
+#main {
+  /*position: absolute;*/
+  height: 100%;
+  width: 100%;
+  /*display: flex;*/
+  /*flex-direction: column;*/
+  /*position: relative;*/
+}
 
 
 
