--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -2,8 +2,8 @@
   /*background-color: #f0f0f0;*/
   /*background-color: #eceaea;*/
   background-color: #ccc;
-  min-height: 50%;
-
+  /*height: 100%;*/
+  width: 100%;
 }
 
 h2 {
@@ -11,37 +11,43 @@ h2 {
 }
 
 .AboutMe {
+  /*height: 100%;*/
   /*vertical-align: middle;*/
   /*display: table-cell;*/
-/*  background-color: rgba(0, 0, 0, 0.7);
-  color: white;*/
-  /*opacity: .4;*/
   /*position: relative;*/
-}
-
-.info {
-  background-color: rgba(0, 0, 0, 0.3);
-  color: black;
-  text-align: left;
+  display: inline-block;
+  /*vertical-align: top;*/
 }
 
 .tictactoe {
   background-color: red;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px){
   .info {
-    width: 50%;
-    /*display: table;*/
+    width: 44%;
+    margin: 3%;
     left: 0;
-    position: absolute;
+    float: left;
+    position: relative;
+    color: black;
+    text-align: left;
+    display: table;
   }
-
+  
   .tictactoe {
-    right: 0;
-    /*top: 50%;*/
-    /*transform: translate(0, -50%);*/
-    width: 50%;
     position: absolute;
+    /*top: 0;*/
+    /*bottom: 0;*/
+    right: 0;
+    float: right;
+    width: 44%;
+    margin: 3%;
   }
 }
+
+
+
+
+
+
