--- a/src/components/css/Contact.css
+++ b/src/components/css/Contact.css
@@ -3,6 +3,6 @@
 }
 
 .ContactMe {
-  vertical-align: middle;
-  display: table-cell;
+ /* vertical-align: middle;
+  display: table-cell;*/
 }
