--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -3,16 +3,20 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /*background-attachment: fixed;*/
   background-color: #f0f0f0;
   width: 100%;
-  height: 100%;
-  text-align: center;
-  vertical-align: middle;
-  display: table;
+  min-height: 100%;
+  /*text-align: center;*/
+  /*vertical-align: middle;*/
+  /*display: table;*/
+  position: relative;
+  display: block;
 }
 
 .me {
-  vertical-align: middle;
-  display: table-cell;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
