--- a/src/components/css/Projects.css
+++ b/src/components/css/Projects.css
@@ -1,8 +1,11 @@
 .Projects {
   background: #07cdff;
+  /*height: 100%;*/
+  /*position: relative;*/
+  /*display: block;*/
 }
 
 .ProjectsMe {
-  vertical-align: middle;
-  display: table-cell;
+  /*vertical-align: middle;*/
+  /*display: table-cell;*/
 }
